fix getFirst()
oui boin ca va j en avais oublié un